# localSendCli

./: .gitignore  LICENSE  README.md  README_UPDATE.md  big  localsendcli.py  pyproject.toml  requirements.txt  test.py  test.sh
pylocalsend/: __init__.py  cli.py
