[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pylocalsend"
version = "0.2.0"
description = "A lightweight CLI tool for sharing files over a local network, inspired by LocalSend"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.7"
authors = [
    {name = "guolei"},
]
keywords = ["localsend", "file-sharing", "lan", "cli", "transfer"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Networking",
    "Topic :: Utilities",
]

dependencies = [
    "requests",
]

[project.optional-dependencies]
discovery = ["zeroconf"]
network = ["netifaces"]
all = ["zeroconf", "netifaces"]

[project.urls]
Homepage = "https://github.com/guolei/pylocalsend"
Repository = "https://github.com/guolei/pylocalsend"

[project.scripts]
pylocalsend = "pylocalsend.cli:main"

[tool.setuptools.packages.find]
include = ["pylocalsend*"]
